# tochat

./: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1666333566614.mjs
.github/workflows/: main.yml
src/: App.jsx  App.tsx  main.jsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/network/: connection_channel.rs  mod.rs  secure.rs
src/components/Chat/: display.css  display.jsx  display.tsx
src/components/Chat/Msg/: msg.tsx
src/components/Login/: login.css  login.jsx  login.tsx
src/routes/: index.tsx
